fixes Object display overflow on generator cards

--- a/packages/cms/src/components/ConsoleVariable.css
+++ b/packages/cms/src/components/ConsoleVariable.css
@@ -9,5 +9,8 @@
 
   &.object, &.array, &.function {
     font-style: italic;
+    & pre {
+      white-space: pre-wrap;
+    }
   }
 }
